--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <sonar.host.url>http://54.147.9.24:9000</sonar.host.url>
         <sonar.organization>Inventory.io</sonar.organization>
         <sonar.projectKey>Inventory.io</sonar.projectKey>
+        <sonar.login>sqp_eaa16bac94134f5893413a960f53b37b937429be</sonar.login>
     </properties>
 
     <distributionManagement>
