--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,13 @@ phases:
   install:
     runtime-versions:
       java: corretto17
+     commands:
+      - echo "Installing AWS CLI"
+      - pip install awscli
   pre_build:
     commands:
+      - echo "Fetching secret from Secrets Manager"
+      - export CODEARTIFACT_AUTH_TOKEN=$(aws secretsmanager get-secret-value --secret-id secrete-key --query SecretString --output text)
       - echo "pre-build started"
       - pwd
       - ls -lrta
@@ -15,12 +20,12 @@ phases:
       - pwd
       - ls -lrt
       - ls -lrta /root/.m2/
+      - cp -pvr settings.xml /root/.m2/
       - echo "Code Scanning has been completed!"
   build:
     commands:
       - echo "Build started on $(date)"
-      #- mvn clean validate compile test install verify package deploy 
-     # - cp -pvr settings.xml /root/.m2
+      - mvn clean validate compile test install verify package deploy 
       - ls -lrta
   post_build:
     commands:
