--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,7 @@ phases:
       - ls -lrt
       - ls -lrta /root/.m2/
       - cp -pvr settings.xml /root/.m2/
+      - ls -lrta /root/.m2/
       - echo "Code Scanning has been completed!"
   build:
     commands:
