--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - pwd
       - ls -lrta
       - echo "Code Scanning..."
-      - mvn clean
+      #- mvn clean verify sonar:sonar
       - pwd
       - ls -lrt
       - ls -lrta /root/.m2/
@@ -25,8 +25,10 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
-      - mvn clean validate compile test install verify package deploy 
+     # - mvn clean validate compile test install verify package 
+      - mvn package
       - ls -lrta
+      - sh 'curl -u admin:Rajesh@123 -T target/${warFile} "http://54.160.243.42:8080/manager/text/deploy?path=/capstone-project&update=true"'
   post_build:
     commands:
       - echo "Build complete on $(date)"
