--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,6 +28,8 @@ phases:
      # - mvn clean validate compile test install verify package 
       - mvn package
       - ls -lrta
+      - apt update
+      - apt install curl -y
       - sh 'curl -u admin:Rajesh@123 -T target/${warFile} "http://54.160.243.42:8080/manager/text/deploy?path=/capstone-project&update=true"'
   post_build:
     commands:
