--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,8 +25,7 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
-     # - mvn clean validate compile test install verify package 
-      - mvn package
+      - mvn clean validate compile test install verify package 
       - mvn deploy
       - ls -lrta
       - apt update
