--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-spring.application.name=Inventory_Management
-# H2 configuration for runtime testing (optional)
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=inventory
-spring.datasource.password=000000
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Sample properties used by Spring configuration in ApplicationConfig.
 
+HelloWorld.SiteName=Sample App
