--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,32 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <sonar.host.url>http://54.89.137.66:9000</sonar.host.url>
-        <sonar.organization>Capstone</sonar.organization>
-        <sonar.projectKey>Capstone</sonar.projectKey>
-        <sonar.login>sqp_831f1c44c9b977596a5b05e85d6e305986874074</sonar.login>
+        <sonar.host.url>http://54.152.205.68:9000</sonar.host.url>
+        <sonar.organization>cloudbinaryio</sonar.organization>
+        <sonar.projectKey>cloudbinaryio</sonar.projectKey>
+        <sonar.login>sqp_ee60244f58bb57abe4bccfbcf177a686037bf14a</sonar.login>
+
+
     </properties>
-<!--       
+
+       
 <distributionManagement>
-  <repository>
-    <id>capstone-capstone_project</id>
-    <name>capstone-capstone_project</name>
-    <url>https://capstone-730335265678.d.codeartifact.us-east-1.amazonaws.com/maven/capstone_project/</url>
-  </repository>
+
+    <repository>
+        <id>release</id>
+        <name>cb-libs-release-local</name>
+        <url>http://54.144.102.195:8082/artifactory/cb-libs-release-local/</url>
+    </repository>
+
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>cb-libs-snapshots-local</name>
+        <url>http://54.144.102.195:8082/artifactory/cb-libs-snapshots-local/</url>
+    </snapshotRepository>
+
 </distributionManagement>
--->
+
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
