--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,15 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <sonar.host.url>http://54.152.205.68:9000</sonar.host.url>
-        <sonar.organization>cloudbinaryio</sonar.organization>
-        <sonar.projectKey>cloudbinaryio</sonar.projectKey>
-        <sonar.login>sqp_ee60244f58bb57abe4bccfbcf177a686037bf14a</sonar.login>
+        <sonar.host.url>http://54.89.137.66:9000</sonar.host.url>
+        <sonar.organization>Capstone</sonar.organization>
+        <sonar.projectKey>Capstone</sonar.projectKey>
+        <sonar.login>sqp_831f1c44c9b977596a5b05e85d6e305986874074</sonar.login>
 
 
     </properties>
 
-       
+<!--       
 <distributionManagement>
 
     <repository>
@@ -38,7 +38,7 @@
     </snapshotRepository>
 
 </distributionManagement>
-
+-->
     
     <dependencies>
         <dependency>
