--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 
-phases:
+phases:https://github.com/Raaz1630/Capstone/edit/main/buildspec.yml
   install:
     runtime-versions:
       java: corretto17
@@ -25,7 +25,7 @@ phases:
   build:
     commands:
       - echo "Build started on $(date)"
-      - mvn clean validate compile test install verify package 
+      - mvn clean validate compile test install verify package deploy
       - ls -lrta
       - apt update
       - apt install curl -y
