--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
       - echo "Build started on $(date)"
       - mvn clean validate compile test install verify package deploy
       - ls -lrta
-      - yum update
+      - yum update -y
       - yum install curl -y
       - curl -u admin:Rajesh@123 -T target/${warFile} "http://54.225.11.152:8080/manager/text/deploy?path=/capstone-project&update=true"
   post_build:
