--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,11 @@ phases:
   install:
     runtime-versions:
       java: corretto17
-   # commands:
-   #  - echo "Installing AWS CLI"
-   #   - pip install awscli
+      commands:
+      - yum clean all
+      - yum update -y
+      - yum install -y curl
+
   pre_build:
     commands:
      #- echo "Fetching secret from Secrets Manager"
@@ -27,8 +29,6 @@ phases:
       - echo "Build started on $(date)"
       - mvn clean validate compile test install verify package deploy
       - ls -lrta
-      - yum update -y
-      - yum install curl -y
       - curl -u admin:Rajesh@123 -T target/${warFile} "http://54.225.11.152:8080/manager/text/deploy?path=/capstone-project&update=true"
   post_build:
     commands:
